# rust-project-template

./: Cargo.toml  README.md  build.rs  deny.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  options.rs  run.rs
crates/config/: Cargo.toml
crates/config/data/: config_0.toml
crates/config/src/: lib.rs  rpc.rs
