[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "execmd"
path = "src/main.rs"


[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
git-version.workspace = true
anyhow.workspace = true
clap.workspace = true
const-str.workspace = true

config = {path="../config"}
