[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
serde_ignored.workspace = true
tracing.workspace = true
